<resources>
    <string name="app_name">ForeignLanguageTrainingAndroid</string>
    <!-- Базовый адрес REST API серверной составляющей приложения -->
    <!-- Вариант 1. Симулятор Genymotion с QEMU
     Сначала нужно запустить виртуальное устройство,
     открыть командную оболочку ОС и выполнить команды:
     cd C:\Users\Yuriy\AppData\Local\Android\Sdk\platform-tools
     adb reverse tcp:8090 tcp:8090 -->
    <!-- <string name="network_base_server_url">http://127.0.0.1:8090/lang-trainer/api</string> -->
    <!-- Вариант 2. Симулятор Genymotion с VirtualBox -->
    <!-- <string name="network_base_server_url">http://10.0.3.2:8090/lang-trainer/api</string> -->
    <!-- Вариант 3. Стандартный эмулятор виртуальных устройств Android - AVD -->
    <string name="network_base_server_url">http://10.0.2.2:8090/lang-trainer/api</string>
    <!-- Тексты ошибок -->
    <string name="message_error">Error</string>
    <string name="message_error_http_request_failed">Server request error</string>
    <string name="message_error_http_action_failed">Server response: Action not completed</string>
    <string name="message_error_http_connection_failed">Error connecting to server: </string>
    <string name="message_error_http_reponse_fail_code">The request to the server was not successful: </string>
    <string name="message_error_http_response_nodata">Error reading server response data: data missing</string>
    <string name="message_error_http_response_data_read_failed">Error reading server response data: </string>
    <string name="message_error_validation_login">Fill in the \'login\' field</string>
    <string name="message_error_validation_password">Fill in the \'password\' field</string>
    <string name="message_error_validation_confirm_password">Fill in the \'password confirmation\' field</string>
    <string name="message_error_validation_confirm_password_matching">Passwords don\'t match</string>
    <string name="message_error_validation_name">The \'name\' field must be left blank or contain no more than 100 characters</string>
    <string name="message_error_validation_errors">Validation errors</string>
    <string name="message_error_validation_error">Validation error</string>
    <string name="message_error_http_response_unauthorized">Authentication Error</string>
    <string name="message_error_http_response_unauthorized_full">You are not authenticated. First login to your account</string>
    <string name="message_error_http_response_forbidden">Authorization error</string>
    <string name="message_error_http_response_forbidden_full">You are not authorized for this action</string>
    <string name="message_error_http_response_auth_wrong_credentials">Wrong login or password</string>
    <string name="message_error_http_response_conflict">Such data already exists</string>
    <string name="message_error_http_response_not_found">Data not found</string>
    <string name="message_error_deserialization">Deserialization error</string>
    <string name="message_error_serialization">Serialization error</string>
    <string name="message_error_failed_to_play_audio">Failed to play audio</string>
    <!-- Тексты информационных сообщений -->
    <string name="message_info_sign_in_success">Login successful</string>
    <!-- Стандартное название типа содержимого тела HTTP-запроса или ответа - json -->
    <string name="http_mediatype_json">application/json</string>
    <!-- REST API серверной составляющей приложения -->
    <!-- URI конечной точки "Роли" -->
    <string name="network_roles_uri">auth/admin/roles</string>
    <!-- URI конечной точки "Пользователи" -->
    <string name="network_users_uri">auth/users</string>
    <!-- URI конечной точки "Пользователи - Проверить" -->
    <string name="network_users_check_uri">auth/users/check</string>
    <!-- URI стандартной конечной точки простой аутентификации SpringSecurity -->
    <string name="network_simple_spring_security_login_uri">login</string>
    <!-- URI стандартной конечной точки простой выхода из учётной записи SpringSecurity -->
    <string name="network_simple_spring_security_logout_uri">logout</string>
    <!-- URI конечной точки "Администратор - Профили" -->
    <string name="network_admin_profiles_uri">admin/profiles</string>
    <!-- URI конечной точки "Профили" -->
    <string name="network_profiles_uri">profiles</string>
    <!-- URI конечной точки "Профили - Текущий" -->
    <string name="network_profiles_current_uri">profiles/current</string>
    <!-- URI конечной точки "Языки" -->
    <string name="network_languages_uri">languages</string>
    <!-- URI конечной точки "комбинации 'родной язык - изучаемый язык - уровень владения языком'" -->
    <string name="network_language_levels_uri">language-levels</string>
    <!-- URI конечной точки "Уроки - Пункты для списка" -->
    <string name="network_lessons_list_items_uri">lessons/list-items</string>
    <!-- URI конечной точки "Уроки - Урок по изучению слов - Слова" -->
    <string name="network_lessons_word_lesson_words_uri">lessons/word-lessons/{id}/words</string>
    <!-- URI конечной точки "Проверки - Проверки знания слов - Слово - Результаты" -->
    <string name="network_tests_word_tests_words_results_uri">tests/word-tests/word/{id}/results</string>
    <!-- URI конечной точки "Проверки - Проверки знания слов - Урок - Результаты" -->
    <string name="network_tests_word_tests_lessons_results_uri">tests/word-tests/lessons/{id}/results</string>
    <!-- URI конечной точки "Проверки - Проверки знания слов - Результаты" -->
    <!--<string name="network_tests_word_tests_results_uri">tests/word-tests/results/{id}</string>-->
    <!-- URI конечной точки "Проверки - Проверки знания слов - Слово - Результаты - Прибавить" -->
    <string name="network_tests_word_tests_words_results_add_uri">tests/word-tests/words/{id}/results/add</string>
    <!-- Текстовое содержимое представлений -->
    <string name="common_next">Next</string>
    <string name="common_back">Back</string>
    <string name="common_save">Save</string>
    <string name="common_study">Study</string>
    <string name="common_test">Test</string>
    <string name="common_menu">Menu</string>
    <string name="splash_screen_title_line1">Foreign Language Training</string>
    <string name="splash_screen_title_line2">Android</string>
    <string name="sign_in_title">Login</string>
    <string name="sign_in_subtitle">Please sign in to continue</string>
    <string name="sign_in_login">login</string>
    <string name="sign_in_password">password</string>
    <string name="sign_in_sign_in_button">Sign In</string>
    <string name="sign_in_sign_up_label">Don\'t have an account?</string>
    <string name="sign_in_sign_up_button">Sign Up</string>
    <string name="sign_up_title">Register</string>
    <string name="sign_up_subtitle">Create your account</string>
    <string name="sign_up_login">login</string>
    <string name="sign_up_password">password</string>
    <string name="sign_up_confirm_password">confirm password</string>
    <string name="sign_up_sign_up_button">Sign Up</string>
    <string name="sign_up_sign_in_label">Already have an account?</string>
    <string name="sign_up_sign_in_button">Sign In</string>
    <string name="profile_creating_title">Creating a profile</string>
    <string name="profile_creating_subtitle_languages">Languages</string>
    <string name="profile_creating_subtitle_level">Level</string>
    <string name="profile_creating_subtitle_name_and_avatar">Name and Avatar</string>
    <string name="profile_creating_subtitle_final">Your profile info</string>
    <string name="profile_creating_step">Step </string>
    <string name="profile_creating_native_language">Native language</string>
    <string name="profile_creating_learning_language">Learning language</string>
    <string name="profile_creating_target_level">Target level</string>
    <string name="profile_creating_display_name">display name (optional)</string>
    <string name="profile_creating_avatar">avatar (optional)</string>
    <string name="profile_creating_final_native_language">Native language:</string>
    <string name="profile_creating_final_learning_language">Learning language:</string>
    <string name="profile_creating_final_level">Level:</string>
    <string name="main_sign_out_button">Sign Out</string>
    <string name="lesson_list_title">Lessons</string>
    <string name="lesson_dialog_prompt">Study the material or test your knowledge\?</string>
    <string name="word_study_dialog_prompt">Test your knowledge or return to the lessons menu\?</string>
    <string name="word_test_final_prompt">Test your knowledge again or return to the lessons menu\?</string>
    <string name="word_test_final_last_results_template" formatted="false">Last test session success rate: %s%% (%s/%s)</string>
    <string name="word_test_final_total_results_template" formatted="false">Total test success rate: %s%% (%s/%s)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>