<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:padding="15dp"
    tools:context=".fragments.profilecreating.BaseStepFragment">

    <TextView
        android:id="@+id/activityProfileCreating_fragmentNameAndAvatar_title_TextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="top"
        android:orientation="vertical"
        android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            android:hint="@string/profile_creating_display_name"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activityProfileCreating_fragmentNameAndAvatar_name_TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/activityProfileCreating_fragmentNameAndAvatar_avatar_CircleImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/default_avatar"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:padding="15dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_creating_avatar"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">

        <Button
            android:id="@+id/activityProfileCreating_fragmentNameAndAvatar_back_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/common_back"/>

        <Button
            android:id="@+id/activityProfileCreating_fragmentNameAndAvatar_next_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/common_next"/>
    </LinearLayout>
</LinearLayout>