<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:padding="15dp"
    tools:context=".fragments.profilecreating.BaseStepFragment">

    <TextView
        android:id="@+id/activityProfileCreating_fragmentFinal_title_TextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="top"
        android:orientation="horizontal"
        android:layout_gravity="top">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/activityProfileCreating_fragmentFinal_avatar_CircleImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/default_avatar"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:padding="15dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/activityProfileCreating_fragmentFinal_name_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:gravity="left"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:weightSum="2"
        android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_creating_final_native_language"
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:gravity="left"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_creating_final_learning_language"
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:gravity="left"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_creating_final_level"
                    android:textStyle="bold"
                    android:padding="15dp"
                    android:gravity="left"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activityProfileCreating_fragmentFinal_nativeLanguage_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:gravity="left"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/activityProfileCreating_fragmentFinal_learningLanguage_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:gravity="left"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/activityProfileCreating_fragmentFinal_level_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:gravity="left"
                    android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/activityProfileCreating_fragmentFinal_back_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/common_back"/>

        <Button
            android:id="@+id/activityProfileCreating_fragmentFinal_save_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/common_save"/>
    </LinearLayout>
</LinearLayout>